--- a/static/md/1.0_Introduction.md
+++ b/static/md/1.0_Introduction.md
@@ -10,12 +10,12 @@ class: left
 
 # The Rust Programming Language
 
-* Rust is a programming language that helps you write faster, more reliable
+- Rust is a programming language that helps you write faster and more reliable
   software
 
-* Provides high-level ergonomics and low-level control
+- Provides high-level ergonomics and low-level control
 
-* Balancing powerful technical capacity and a great developer experience
+- Balancing powerful technical capacity and a great developer experience
 
 ---
 
@@ -23,6 +23,6 @@ class: left
 
 # Summary
 
-* Welcome to rust-lang-gist!
+- Welcome to rust-lang-gist!
 
-* Enjoy learning Rust
+- Enjoy learning Rust
