--- a/static/md/3.1_Variables_and_Mutability.md
+++ b/static/md/3.1_Variables_and_Mutability.md
@@ -42,11 +42,11 @@ fn main() {
 The total no of puppies are: 5
 ```
 
-* Valid for the entire run of the program in the defined scope
+- Valid for the entire run of the program in the defined scope
 
-* While Rust can infer types for variables, you need to annotate for constants
+- While Rust can infer types for variables, you need to annotate for constants
 
-**convention:** Use all upper case with underscores between words
+**convention:** Snake_case with CAPITAL_LETTERS
 
 ---
 
@@ -106,13 +106,13 @@ class: left
 
 # Constants vs Immutable
 
-* Constants aren’t only immutable by default, they’re always immutable
+- Constants aren’t only immutable by default, they’re always immutable
 
-* Can't assign functions to a `const`
+- Can't assign functions to a const
 
-* Can't use if expressions with const
+- Can't use if expressions with const
 
-* `mut` is not valid with `constants`
+- `mut` is not valid with `constants`
 
 ---
 
@@ -135,9 +135,9 @@ fn main() {
 When declaring a new variable using `let` with the same name as the old variable,
 the new variable is shadowing the old one
 
-* It helps perform transformations on immutable variables
+- It helps perform transformations on immutable variables
 
-* It effectively creates a new variable with the same name
+- It effectively creates a new variable with the same name
 
 ---
 
@@ -145,11 +145,11 @@ class: left
 
 # Mutable vs Shadowing
 
-* `mut` changes the value where as `shadowing` creates a new variable
+- `mut` changes the value where as `shadowing` creates a new variable
 
-* `mut` will only change the value not the type
+- `mut` will only change the value not the type
 
-* `shadowing` gives the flexibility of changing the type of the variable
+- `shadowing` gives the flexibility of changing the type of the variable
 
 ```rust
 let spaces = "   "; // type of String
@@ -162,12 +162,14 @@ class: left
 
 # Summary
 
-* `let` declares a variable
+- `let` declares a variable
 
-* `mut` makes it mutable
+- `mut` makes it mutable
 
-* `const` declares a constant
+- `const` declares a constant
 
-* `const` can't be mutable
+- `const` can't be mutable
 
-* `shadowing` effectively creates new variable
+- declaring a variable again with `let` is called shadowing
+
+- `shadowing` effectively creates new variable
