--- a/static/md/3.2_Data_Types.md
+++ b/static/md/3.2_Data_Types.md
@@ -10,19 +10,21 @@ class: left
 
 # Types
 
-* Rust is a statically typed language and every value is of a certain `type`
+- Rust is a statically typed language and every value is of a certain `type`
 
-* You can
+- You can
 
-  * **annotate** the types or
+  - **annotate** the types
 
-  * compiler will **infer** types based on the
+  or
 
-    * **value**
+  - compiler will **infer** types based on the
+
+    - **value**
 
       and
 
-    * **how it is used**
+    - **how it is used**
 
 ---
 
@@ -80,9 +82,9 @@ class: left
 
 # Builtin Types
 
-* `scalar`
+- `scalar`
 
-* `compound`
+- `compound`
 
 ---
 
@@ -90,15 +92,15 @@ class: left
 
 # Scalar Types
 
-* scalar type represents a single value
+- scalar type represents a single value
 
-  * integers
+  - integers
 
-  * floating-point numbers
+  - floating-point numbers
 
-  * Booleans, and
+  - Booleans, and
 
-  * characters
+  - characters
 
 ---
 
@@ -116,19 +118,19 @@ Numbers with out decimal points
 | 64-bit | `i64`   | `u64`    |
 | arch   | `isize` | `usize`  |
 
-* **Signed** supports positive and negative nubmers and starts with `i`
+- **Signed** supports positive and negative nubmers and starts with `i`
 
-* **Unsigned** only supports positive numbers and starts with `u`
+- **Unsigned** only supports positive numbers and starts with `u`
 
-* Where n is the number of bits that variant uses...
+- Where n is the number of bits that variant uses...
 
-  * signed integter can store -(2<sup>n - 1</sup>) to 2<sup>n - 1</sup> - 1
+  - signed integter can store -(2<sup>n - 1</sup>) to 2<sup>n - 1</sup> - 1
 
-  * unsigned integter can store `0` to 2<sup>n - 1</sup> - 1
+  - unsigned integter can store `0` to 2<sup>n - 1</sup> - 1
 
-* `isize` and `usize` depend on the computer architecture
+- `isize` and `usize` depend on the computer architecture
 
-* Defaults to i32, generally the fastest, even on 64-bit systems
+- Defaults to i32, generally the fastest, even on 64-bit systems
 
 ---
 
@@ -138,13 +140,13 @@ class: left
 
 Numbers with decimal points
 
-* Two types
+- Two types
 
-  * f32 : single-precision float
+  - f32 : single-precision float
 
-  * f64 : double precision float
+  - f64 : double precision float
 
-* defaults to f64
+- defaults to f64
 
 ```rust
 fn main() {
@@ -189,9 +191,9 @@ class: left
 
 Specified using `bool`
 
-* `true`
+- `true`
 
-* `false`
+- `false`
 
 ```rust
 fn main() {
@@ -216,13 +218,13 @@ fn main() {
 }
 ```
 
-* Specified with **single quotes**, as opposed to strings that use double quotes
+- Specified with **single quotes**, as opposed to strings that use double quotes
 
-* Represents a Unicode Scalar Value, which includes a lot more than just ASCII
+- Represents a Unicode Scalar Value, which includes a lot more than just ASCII
 
-* Accented letters, Chinese/Japanese/Korean ideographs, emoji, and zero width spaces
+- Accented letters, Chinese/Japanese/Korean ideographs, emoji, and zero width spaces
 
-* A **"character"** isn’t really a concept in Unicode, so your human intuition for
+- A **"character"** isn’t really a concept in Unicode, so your human intuition for
   what a **"character"** is may not match up with what a **char** is in Rust
 
 ---
@@ -231,11 +233,11 @@ class: left
 
 # Compound Types
 
-* Compound types can group multiple values of other types into one type
+- Compound types can group multiple values of other types into one type
 
-  * Tuples
+  - Tuples
 
-  * Arrays
+  - Arrays
 
 ---
 
@@ -245,7 +247,7 @@ class: left
 
 A comma-separated list of values inside parentheses
 
-* Can have different types of values
+- Can have different types of values
 
 ```rust
 fn main() {
@@ -255,7 +257,7 @@ fn main() {
 }
 ```
 
-* Tuple inside a tuple
+- Tuple inside a tuple
 
 ```rust
 let tup = (500, 6.4, ('X', 200));
@@ -280,7 +282,7 @@ fn main() {
 }
 ```
 
-* Ignore the destructured values with `_`
+- Ignore the destructured values with `_`
 
 **dot notation** : Access elements through **.index**
 
@@ -304,11 +306,11 @@ class: left
 
 A comma-separated list of values inside square brackets
 
-* Single chunk of memory allocated on the stack
+- Single chunk of memory allocated on the stack
 
-* Unlike tuple, every element of an array must be of same type
+- Unlike tuple, every element of an array must be of same type
 
-* arrays are fixed length
+- arrays are fixed length
 
 ```rust
 fn main() {
@@ -350,9 +352,9 @@ fn main() {
 }
 ```
 
-* Code will compile
+- Code will compile
 
-* Results in a runtime error
+- Results in a runtime error
 
 ```text
 $ cargo run
@@ -372,12 +374,12 @@ class: left
 
 # Summary
 
-* Rust is a static typed language
+- Rust is a static typed language
 
-* Scalar types like Integers, floating-point numbers, booleans and characters
+- Scalar types like Integers(i32, u64), floating-point numbers(f32, f64), booleans(bool) and characters(char + '')
 
-* Compound types like tuple and Array
+- Compound types like tuple and Array
 
-* Tuples can be mixed type
+- (1, 2.5, 'c') Tuples can be mixed type
 
-* Arrays should be of single type and fixed length
+- [2, 3, 4; 5] Arrays should be of single type and fixed length
