--- a/static/md/3.3_How_Funcitons_Work.md
+++ b/static/md/3.3_How_Funcitons_Work.md
@@ -20,13 +20,13 @@ fn another_function() {
 }
 ```
 
-* `fn` declares a function
+- `fn` declares a function
 
-* `main` function is the default entry point for the program
+- `main` function is the default entry point for the program
 
-* `snake_case` is the convention for function names
+- `snake_case` is the convention for function names
 
-* You can access functions above their declaration, Rust dosen't care where your
+- You can access functions above their declaration, Rust dosen't care where your
   functions are declared
 
 ---
@@ -47,9 +47,9 @@ fn another_function(x: i32) {
 }
 ```
 
-* `x: i32` declare parameter with type
+- `x: i32` declare parameter with type
 
-* Multiple parameter declarations are Separated with commas
+- Multiple parameter declarations are Separated with commas
 
 ---
 
@@ -59,11 +59,11 @@ class: left
 
 Instructions that perform some action and do not return a value
 
-* `let y = 6;` is a statement
+- `let y = 6;` is a statement
 
-* You can't `let x = (let y = 6);`
+- You can't `let x = (let y = 6);`
 
-* `(let y = 6);` is a statement, dosen't return any value
+- `(let y = 6);` is a statement, dosen't return any value
 
 ---
 
@@ -73,13 +73,13 @@ class: left
 
 Instructions that return a value
 
-* Expressions always evaluate to a resulting value
+- Expressions always evaluate to a resulting value
 
-* `5 + 6` is an expression
+- `5 + 6` is an expression
 
-* In `let y = 6;` `6` is an expression resulting in the value `6`
+- In `let y = 6;` `6` is an expression resulting in the value `6`
 
-* Calling a function, macro and new scopes `{}` are expressions
+- Calling a function, macro and new scopes `{}` are expressions
 
 ---
 
@@ -95,17 +95,17 @@ class: left
 
 # Functions with Return Values
 
-* Functions can return values
+- Functions can return values
 
-* We declare their type after an arrow `-> i32`
+- We declare their type after an arrow `-> i32`
 
-* Return type is synonymous with the value of the final expression
+- Return type is synonymous with the value of the final expression
 
-* Return early using `return` keyword or last expression is returned implicitly
+- Return early using `return` keyword or last expression is returned implicitly
 
 **convention :** The official style is **"return is only for early returns"**
 
-* Functions that dosen't return anything explicityly returns empty tuple `()`
+- Functions that dosen't return anything explicityly returns empty tuple `()`
 
 ---
 
@@ -113,9 +113,9 @@ class: left
 
 # macros
 
-* Macros unlike functions end with an exclamation `!`
+- Macros unlike functions end with an exclamation `!`
 
-* Macros expand at compile time to more complex function calls
+- Macros expand at compile time to more complex function calls
 
 ---
 
@@ -129,7 +129,7 @@ fn five() -> i32 {
 }
 ```
 
-* 5 is the last expression and it is returned implicitly
+- 5 is the last expression and it is returned implicitly
 
 ---
 
@@ -158,13 +158,13 @@ error[E0308]: mismatched types
              found type `()`
 ```
 
-* Expect the return type `i32`
+- Expect the return type `i32`
 
-* `x+1` evaluates to an expression and give an `i32` but `;` makes it a statement
+- `x+1` evaluates to an expression and give an `i32` but `;` makes it a statement
 
-* Since nothing is explicitly returned an empty tuple `()` is returned
+- Since nothing is explicitly returned an empty tuple `()` is returned
 
-* Panics with `mismatched types` error
+- Panics with `mismatched types` error
 
 ---
 
@@ -172,12 +172,12 @@ class: left
 
 # Summary
 
-* `main` is the entry point
+- `main` is the entry point
 
-* `fn` declares a function
+- `fn` declares a function
 
-* Function implicitly returns the last expression
+- Function implicitly returns the last expression
 
-* Return explicitily with `return` keyword
+- Return explicitily with `return` keyword
 
-* Else will return an empty tuple `()`
+- Else will return an empty tuple `()`
