--- a/static/md/4.3_Slices.md
+++ b/static/md/4.3_Slices.md
@@ -19,16 +19,16 @@ class: left
 
 # String Slices
 
-* string[start..end]
+- string[start..end]
 
-* `start..end` syntax is a range that begins at start and continues up to
+- `start..end` syntax is a range that begins at start and continues up to
   but not including, end
 
-* Slice will store pointer to the staring_index and the length
+- Slice will store pointer to the staring_index and the length
 
-* `[0..end]` and `[..end]` slices from beginning
+- `[0..end]` and `[..end]` slices from beginning
 
-* `[start..len]` and `[start..]` slices till the end
+- `[start..len]` and `[start..]` slices till the end
 
 ---
 
@@ -36,5 +36,5 @@ class: left
 
 # Summary
 
-* Ownership, borrowing, and slices ensure memory safety in Rust programs at
+- Ownership, borrowing, and slices ensure memory safety in Rust programs at
   compile time
