--- a/static/md/8.2_Strings.md
+++ b/static/md/8.2_Strings.md
@@ -8,18 +8,18 @@ class: middle, center
 
 class: left
 
-# Strings Store UTF-8 Encoded Text
+# Storing UTF-8 Encoded Text with Strings
 
 Strings are implemented as a collection of bytes plus some methods to provide
 useful functionality when those bytes are interpreted as text
 
 Strings are difficult because...
 
-* Rust’s propensity for exposing possible errors
+- Rust’s propensity for exposing possible errors
 
-* strings being a more complicated data structure
+- strings being a more complicated data structure
 
-* UTF-8
+- UTF-8
 
 ---
 
@@ -27,13 +27,13 @@ class: left
 
 # str
 
-* The core of Rust implements `str`
+- The core of Rust implements `str`
 
-* Generally seen in it's borrowd form `&str`
+- Generally seen in it's borrowd form `&str`
 
-* These are called **string slices**
+- These are called **string slices**
 
-* **String literals** are stored in the binary output of the program and are
+- **String literals** are stored in the binary output of the program and are
   therefore string slices
 
 ---
@@ -42,9 +42,9 @@ class: left
 
 # String
 
-* String type is provided in Rust standard library
+- String type is provided in Rust standard library
 
-* Is a growable, mutable, owned, UTF-8 encoded string type
+- Is a growable, mutable, owned, UTF-8 encoded string type
 
 ---
 
@@ -52,17 +52,17 @@ class: left
 
 # String vs str
 
-* 'String' is a string buffer and `&str` is a view into string buffer
+- 'String' is a string buffer and `&str` is a view into string buffer
 
-* “strings” mean the `String` and the string slice `&str` types
+- “strings” mean the `String` and the string slice `&str` types
   not just one of those types
 
-* Both `String` and `&str` are UTF-8 encoded
+- Both `String` and `&str` are UTF-8 encoded
 
-* Std lib also includes a number of other string types, such as
+- Std lib also includes a number of other string types, such as
   OsString, OsStr, CString, and CStr
 
-* Crates can provide even more options
+- Crates can provide even more options
 
 ---
 
@@ -94,9 +94,9 @@ class: left
 
 # UTF-8 encoded
 
-* Strings are UTF-8 encoded
+- Strings are UTF-8 encoded
 
-* We can include any properly encoded data in them
+- We can include any properly encoded data in them
 
 ```rust
 let hello = String::from("السلام عليكم");
@@ -120,9 +120,9 @@ class: left
 
 A string can
 
-* Grow in size
+- Grow in size
 
-* Contents can change
+- Contents can change
 
 ---
 
@@ -144,11 +144,11 @@ println!("s2 is {}", s2);
 
 `push_str` method ...
 
-* Takes a string slice as parameter
+- Takes a string slice as parameter
 
-* Dosen't take ownership of the argument
+- Dosen't take ownership of the argument
 
-* Adds the string slice to the existing String
+- Adds the string slice to the existing String
 
 ---
 
@@ -163,13 +163,13 @@ s.push('l');
 
 `push` method ...
 
-* Takes a character as parameter
+- Takes a character as parameter
 
-* Dosen't take ownership of the argument
+- Dosen't take ownership of the argument
 
-* Dosen't accept references
+- Dosen't accept references
 
-* Adds the character to the end of String
+- Adds the character to the end of String
 
 ---
 
@@ -189,19 +189,19 @@ class: left
 
 # `+` implementation
 
-* looks someting like this...
+- looks someting like this...
 
   ```rust
   fn add(self, s: &str) -> String {
   ```
 
-* `+` is a generic and we can add only a `&str` to `String`
+- `+` is a generic and we can add only a `&str` to `String`
 
-* We can't add two `String` values
+- We can't add two `String` values
 
-* But, wait, the type of `&s2` is `String` not `Str` ?
+- But, wait, the type of `&s2` is `String` not `Str` ?
 
-* Rust uses a _deref coercion_, which here turns &s2 into &s2[..]
+- Rust uses a _deref coercion_, which here turns &s2 into &s2[..]
 
 ---
 
@@ -213,13 +213,13 @@ class: left
 let s3 = s1 + &s2;
 ```
 
-* `+` takes ownership of s1
+- `+` takes ownership of s1
 
-* Appends a copy of the contents of s2
+- Appends a copy of the contents of s2
 
-* S2 is still valid, no ownership taken
+- S2 is still valid, no ownership taken
 
-* Returns ownership of the result
+- Returns ownership of the result
 
 ---
 
@@ -249,9 +249,9 @@ let s3 = String::from("toe");
 let s = format!("{}-{}-{}", s1, s2, s3);
 ```
 
-* `format!` work like `println!` but returns the string
+- `format!` work like `println!` but returns the string
 
-* Dosen't take ownership of any parameters
+- Dosen't take ownership of any parameters
 
 ---
 
@@ -259,7 +259,7 @@ class: left
 
 # Indexing into Strings
 
-* Strings don’t support indexing
+- Strings don’t support indexing
 
 ```rust
 let s1 = String::from("hello");
@@ -320,11 +320,11 @@ class: left
 
 Rust provides different ways of interpreting the raw string data
 
-* Bytes
+- Bytes
 
-* Unicode Scalar Value
+- Unicode Scalar Value
 
-* Grapheme Clusters
+- Grapheme Clusters
 
 Hindi word “नमस्ते” written in the Devanagari script is ultimately stored as...
 
@@ -334,7 +334,7 @@ class: left
 
 ### Bytes
 
-* A **Vec of u8** values that looks like this
+- A **Vec of u8** values that looks like this
 
 ```rust
 [224, 164, 168, 224, 164, 174, 224, 164, 184, 224, 165, 141, 224, 164, 164,
@@ -351,9 +351,9 @@ class: left
 ['न', 'म', 'स',  '्', 'त',  'े']
 ```
 
-* There are 6 characters
+- There are 6 characters
 
-* 4 and 6 are diacritics which don't make sense on their own
+- 4 and 6 are diacritics which don't make sense on their own
 
 ---
 
@@ -375,10 +375,10 @@ class: left
 
 because...
 
-* it’s not clear the return type would be: a byte value, a character, a grapheme
+- it’s not clear the return type would be: a byte value, a character, a grapheme
   cluster, or a string slice.
 
-* Indexing operations are expected to always take constant time (O(1)), but not
+- Indexing operations are expected to always take constant time (O(1)), but not
   possible to guarantee
 
 ---
@@ -403,10 +403,10 @@ let hello = "Здравствуйте";
 let s = &hello[0..1];
 ```
 
-* Will panic at runtime in the same way accessing an invalid index in a vector
+- Will panic at runtime in the same way accessing an invalid index in a vector
   does
 
-* create string slices with caution, it can crash your program
+- create string slices with caution, it can crash your program
 
 ---
 
@@ -453,7 +453,7 @@ for b in "नमस्ते".bytes() {
 
 Remember that valid Unicode scalar values may be made up of more than one byte
 
-* `grapheme clusters`
+- `grapheme clusters`
 
 functionality is not provided by the standard library, crates are available
 
@@ -463,14 +463,14 @@ class: left
 
 # Summary
 
-* Strings Are Not So Simple
+- Strings Are Not So Simple
 
-* “strings” include `String` type and the string slice `&str`
+- “strings” include `String` type and the string slice `&str`
 
-* They are `UTF-8` encoded
+- They are `UTF-8` encoded
 
-* Update the string with `push_str` or add a character with `push`
+- Update the string with `push_str` or add a character with `push`
 
-* Concatenate strings with `+` or `format`
+- Concatenate strings with `+` or `format`
 
-* Can't safely index into the strings, you can use slicing with caution
+- Can't safely index into the strings, you can use slicing with caution
