--- a/static/md/4.1_What_is_Ownership.md
+++ b/static/md/4.1_What_is_Ownership.md
@@ -10,13 +10,13 @@ class: left
 
 # Memory
 
-* A Part of memory is available to your code to use at runtime
+- A Part of memory is available to your code to use at runtime
 
-* They are structured in two ways
+- They are structured in two ways
 
-  * stack
+  - stack
 
-  * heap
+  - heap
 
 ---
 
@@ -24,19 +24,19 @@ class: left
 
 # Stack
 
-* Stack stores values in the order it gets and removes it in the opposite order
+- Stack stores values in the order it gets and removes it in the opposite order
 
-* This is referred to as, last in first out (LIFO)
+- This is referred to as, last in first out (LIFO)
 
-* All data should take fixed size
+- All data should take fixed size
 
-* The size of the data is known at compile time
+- The size of the data is known at compile time
 
-* Adding data is called `push`ing onto the stack
+- Adding data is called `push`ing onto the stack
 
-* Removing data is called `pop`ping off the stack
+- Removing data is called `pop`ping off the stack
 
-* Fast, because of the way it accesses data
+- Fast, because of the way it accesses data
 
 ---
 
@@ -44,21 +44,21 @@ class: left
 
 # Heap
 
-* On requesting, OS will find a space, mark it as used and then returns the
+- On requesting, OS will find a space, mark it as used and then returns the
   address
 
-* Address is the **Pointer**
+- Address is the **Pointer**
 
-* Heap is less organized
+- Heap is less organized
 
-* Data can be of varied sizes
+- Data can be of varied sizes
 
-* Large data takes more time to allocate
+- Large data takes more time to allocate
 
-* Process of allocating memory is called `allocation on the heap` or simply
+- Process of allocating memory is called `allocation on the heap` or simply
   `allocation`
 
-* Slow, because we have to follow a pointer to access memory
+- Slow, because we have to follow a pointer to access memory
 
 ---
 
@@ -68,43 +68,15 @@ class: left
 
 Different styles of memory management...
 
-* **Garbage collection**, a program that constantly looks for unused memory and
-  cleans at run-time
+- **Garbage collection**, a program that constantly looks for unused memory and
+  cleans at run-time eg; python, js
 
-* **Manual**, programmer must explicitly allocate and free the memory
+- **Manual**, programmer must explicitly allocate and free the memory eg; c, c++
 
-* **ownership rules** Follow a set of rules, that the compiler checks at compile
+- **ownership rules** Follow a set of rules, that the compiler checks at compile
   time with no run-time cost
 
 Rust falls under the third category
-
----
-
-class: left
-
-# Ownership
-
-Ownership defines a set of rules which takes care of...
-
-  * Keeping track of what parts of code is using what data on the heap
-
-  * Minimizing the amount of duplicate data
-
-  * Cleaning up unused data
-
-No need to think of stack and heap once you start following ownership rules
-
----
-
-class: left
-
-# Ownership Rules
-
-* Each value in Rust has a variable, that’s called its **owner**
-
-* There can only be **one owner at a time**
-
-* When the owner goes **out of scope**, the value will be **dropped**
 
 ---
 
@@ -129,9 +101,37 @@ println!("{}", s)
 
 Important points in time...
 
-* When `s` comes into scope, it is valid
+- When `s` comes into scope, it is valid
 
-* It remains so until it goes out of scope
+- It remains so until it goes out of scope
+
+---
+
+class: left
+
+# Ownership Rules
+
+- Each value in Rust has a variable, that’s called its **owner**
+
+- There can only be **one owner at a time**
+
+- When the owner goes **out of scope**, the value will be **dropped**
+
+---
+
+class: left
+
+# Advantages
+
+Ownership rules takes care of...
+
+- Keeping track of what parts of code is using what data on the heap
+
+- Minimizing the amount of duplicate data
+
+- Cleaning up unused data
+
+No need to think of stack and heap once you start following ownership rules
 
 ---
 
@@ -143,45 +143,58 @@ class: left
 let a = "str";
 ```
 
-* str (string literal) - Text is hardcoded directly into the final executable
+- str (string literal) - Text is hardcoded directly into the final executable
 
-  * Fast and efficient to access
+  - Fast and efficient to access
 
-  * Size and contents known at compile time
+  - Size and contents known at compile time
 
-  * Immutable
+  - Immutable
 
 ```rust
 let a = String::from("string");
 ```
 
-* String - Allocated during run time
+- String - Allocated during run time
 
-  * Written to heap, slow to allocate and access
+  - Written to heap, slow to allocate and access
 
-  * Size and contents are not known at compile time
+  - Size and contents are not known at compile time
 
-  * Mutable and Growable
+  - Mutable and Growable
 
 ---
 
 class: left
 
-# Memory and Allocation
+# Memory allocation and release
+
+Memory has to be
+
+- Requested from the operating system at runtime
+
+- Return to the operating system when we’re done
 
 ```rust
+// s is invalid outside the scope
 {
+  let s = String::from("hello"); // requests the memory it needs.
   // s is valid from this point forward
-  let s = String::from("hello");
   // do stuff with s
 } // this scope is now over, and s is no longer valid
 ```
 
-* Memory allocated in heap at runtime
+- Memory allocated in heap at runtime
 
-* Memory is automatically freed once the variable that owns it goes out of scope
+- Memory is automatically freed once the variable that owns it goes out of scope
 
-* Rust calls a special function `drop` automatically at the closing `}`
+- Rust calls a special function `drop` automatically at the closing `}`
+
+---
+
+class: left
+
+# String type
 
 ---
 
@@ -191,11 +204,11 @@ class: left
 
 Variables and data interact in three ways...
 
-  * Move
+- Move
 
-  * Clone
+- Clone
 
-  * Copy
+- Copy
 
 ---
 
@@ -267,10 +280,10 @@ let s2 = s1.clone();
 println!("s1 = {}, s2 = {}", s1, s2);
 ```
 
-* Allocate the heap for `hello` and push onto stack for the pointer, length and
+- Allocate the heap for `hello` and push onto stack for the pointer, length and
   capacity with variable s1
 
-* Clone the stack memory and heap memory for the new variable s2
+- Clone the stack memory and heap memory for the new variable s2
 
 ---
 
@@ -285,15 +298,15 @@ let x = 5;
 let y = x;
 ```
 
-* Bind the value 5 to x and copy the value of x and bind it to y
+- Bind the value 5 to x and copy the value of x and bind it to y
 
-* Not a move operation because, 5 is an integer of known size and allocated in stack
+- Not a move operation because, 5 is an integer of known size and allocated in stack
 
-* There is no difference between deep and shallow copy, in this case
+- There is no difference between deep and shallow copy, in this case
 
-* Any group of simple scalar types can be Copy
+- Any group of simple scalar types can be Copy
 
-* Tuples also, but only if they contain types that are also Copy,
+- Tuples also, but only if they contain types that are also Copy,
   (i32, i32) is Copy, but (i32, String) is not
 
 ---
@@ -379,11 +392,11 @@ fn calculate_length(s: String) -> (String, usize) {
 }
 ```
 
-* Passing an argument is giving ownership
+- Passing an argument is giving ownership
 
-* Return the value to give back the ownership else parent scope won't have value
+- Return the value to give back the ownership else parent scope won't have value
 
-* Tedious to tranfer back all the time, use **borrowing**
+- Tedious to tranfer back all the time, use **borrowing**
 
 ---
 
@@ -391,17 +404,17 @@ class: left
 
 # Summary
 
-* Memory will be organized in **stack** and **heap**
+- Memory will be organized in **stack** and **heap**
 
-* Memory management is done by **garbage collection**, **manual** or **ownership rules**
+- Memory management is done by **garbage collection**, **manual** or **ownership rules**
 
-* Rust uses Ownership rules
+- Rust uses Ownership rules
 
-* Each value will have one owner and its dropped if the owner goes out of scope
+- Each value will have one owner and its dropped if the owner goes out of scope
 
-* Variable scope is limited to the block defined in the {}
+- Variable scope is limited to the block defined in the {}
 
-* Variables and data intereact by **move**, **clone** and **copy** operations
+- Variables and data intereact by **move**, **clone** and **copy** operations
 
-* Passing a variable and returning a variable in a function, will move or copy
+- Passing a variable and returning a variable in a function, will move or copy
   based on the type
