updated to 2018 edition

--- a/static/md/1.0_Introduction.md
+++ b/static/md/1.0_Introduction.md
@@ -10,12 +10,34 @@ class: left
 
 # The Rust Programming Language
 
+A language empowering everyone to build reliable and efficient software.
+
+class: left
+
+# Rust Programming Language
+
 - Rust is a programming language that helps you write faster and more reliable
   software
 
 - Provides high-level ergonomics and low-level control
 
 - Balancing powerful technical capacity and a great developer experience
+
+---
+
+class: left
+
+# Who Rust Is For
+
+- Teams of Developers
+
+- Students
+
+- Companies
+
+- Open Source Developers
+
+- People Who Value Speed and Stability
 
 ---
 
