--- a/static/md/1.1_Installation.md
+++ b/static/md/1.1_Installation.md
@@ -12,31 +12,31 @@ class: left
 
 Helps install, update and uninstall rust
 
-* Install
+- Install
 
   ```bash
   $ curl https://sh.rustup.rs -sSf | sh
   ```
 
-* Updating
+- Updating
 
   ```bash
   $ rustup update
   ```
 
-* Uninstall
+- Uninstall
 
   ```bash
   $ rustup self uninstall
   ```
 
-* Version
+- Version
 
   ```bash
   $ rustc --version
   ```
 
-* Local documentation
+- Local documentation
 
   ```bash
   $ rustup doc
@@ -48,6 +48,6 @@ class: left
 
 # Summary
 
-* rustc - is the compiler
+- rustc - is the compiler
 
-* rustup - helps install, update and uninstall rustc
+- rustup - helps install, update and uninstall rustc
