--- a/static/md/3.1_Variables_and_Mutability.md
+++ b/static/md/3.1_Variables_and_Mutability.md
@@ -23,30 +23,7 @@ fn main() {
 The value of x is: 5
 ```
 
----
-
-class: left
-
-# Constants
-
-Constants are declared using **const**
-
-```rust
-fn main() {
-  const PUPPY_COUNT: i32 = 5;
-  println!("The total no of puppies are: {}", PUPPY_COUNT);
-}
-```
-
-```rust
-The total no of puppies are: 5
-```
-
-- Valid for the entire run of the program in the defined scope
-
-- While Rust can infer types for variables, you need to annotate for constants
-
-**convention:** Snake_case with CAPITAL_LETTERS
+read as... value is bound to the name
 
 ---
 
@@ -76,6 +53,8 @@ error[E0384]: cannot assign twice to immutable variable `x`
   |     ^^^^^ cannot assign twice to immutable variable
 ```
 
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=ef0feef3d6eb08285c49ee891083b3cf)
+
 ---
 
 class: left
@@ -98,7 +77,44 @@ The value of x is: 5
 The value of x is: 6
 ```
 
-`mut` will let you change the value not the type
+- `mut` will let you change the value not the type
+
+- mutating an instance in place is faster in case of large data structures
+
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=1c97bd2f83eccd0cf5bfdf57a8645b46)
+
+---
+
+class: left
+
+# Constants
+
+- values that are bound to a name and are not allowed to change
+
+- declared using **const**
+
+```rust
+fn main() {
+  const MAX_POINTS: u32 = 100_000;
+  println!("The maximum number of points are: {}", MAX_POINTS);
+}
+```
+
+```rust
+The maximum number of points are: 100000
+```
+
+- Valid for the entire run of the program,
+
+- in the defined scope, including global scope
+
+- While Rust can infer types for variables, you need to annotate for constants
+
+**convention:** Snake_case with CAPITAL_LETTERS
+
+- underscores can be inserted in numeric literals to improve readability
+
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=591247020a9c4a234a8911f775d24d2a)
 
 ---
 
@@ -139,6 +155,8 @@ the new variable is shadowing the old one
 
 - It effectively creates a new variable with the same name
 
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=897c2610b3204096e5ce6d983d6bc0fe)
+
 ---
 
 class: left
@@ -155,6 +173,23 @@ class: left
 let spaces = "   "; // type of String
 let spaces = spaces.len(); // type of integer
 ```
+
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=2a976fde15cba3fcf566d79ae6428e41)
+
+---
+
+class: left
+
+# Shadowing a mutable
+
+```rust
+let mut spaces = "   ";
+spaces = spaces.len();
+```
+
+- Error says we’re not allowed to mutate a variable’s type
+
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=fc3bcfde8b7d30d1a3b8176f47659ecb)
 
 ---
 
