--- a/static/md/1.2_Hello_World.md
+++ b/static/md/1.2_Hello_World.md
@@ -8,9 +8,7 @@ class: middle, center
 
 class: left
 
-# First program
-
-Create folders
+# Creating a Project Directory
 
 ```bash
 $ mkdir ~/projects
@@ -18,6 +16,12 @@ $ cd ~/projects
 $ mkdir hello_world
 $ cd hello_world
 ```
+
+---
+
+class: left
+
+# Writing and Running a Rust Program
 
 In **main.rs** write...
 
@@ -47,13 +51,13 @@ fn main() {
 }
 ```
 
-* `fn` defines a function
+- `fn` defines a function
 
-* `main` function inside **main.rs** is the first code that is run
+- `main` function inside **main.rs** is the first code that is run
 
-* Parameters are provided inside `()`
+- Parameters are provided inside `()`
 
-* Function body is wrapped in `{}`
+- Function body is wrapped in `{}`
 
 ---
 
@@ -65,13 +69,13 @@ class: left
 println!("Hello, world!");
 ```
 
-* `println!` prints text to screen
+- `println!` prints text to screen
 
-* `!` indicates that `println!` is a macro
+- `!` indicates that `println!` is a macro
 
-* `"Hello, World!"` is a string literal
+- `"Hello, World!"` is a string
 
-* Line ends with a semicolon `;`
+- Line ends with a semicolon `;`
 
 ---
 
@@ -97,183 +101,6 @@ $ ./main
 
 class: left
 
-# Hello, Cargo!
-
-* Cargo is Rust’s build system and package manager
-
-* Cargo takes care of
-
-  * Creating projects
-
-  * Building your code
-
-  * Downloading the libraries your code depends on and building those libraries
-
-* Installed along with Rust
-
-  ```bash
-  $ cargo --version
-  ```
-
-* Libraries or packages of Rust code are called **crates**
-
----
-
-class: left
-
-# Creating a project
-
-```bash
-$ cargo new hello_cargo --bin
-```
-
-**--bin** : Will create an executable application
-
-**--lib** : Will create a library
-
-**convention :** Use snake_case for crate names
-
----
-
-class: left
-
-# Folder structure
-
-```bash
-|--- src/main.rs
-|--- Cargo.toml
-|--- .gitignore
-```
-
-* All the source code lives inside the `src` folder
-
-  * `main.rs` will have a **hello world** example
-
-    ```rust
-    fn main() {
-      println!("Hello, world!");
-    }
-    ```
-
-* `Cargo.toml` contains the configuration
-
-* Cargo by default initializes **git** as VCS and adds **.gitignore**
-
-  * Change it by using the **--vcs** flag
-
----
-
-class: left
-
-# Cargo.toml
-
-```toml
-[package]
-name = "hello_cargo"
-version = "0.1.0"
-authors = ["Your Name <you@example.com>"]
-
-[dependencies]
-```
-
-* **TOML** is used as Cargo’s configuration format
-
-* **[package]** lists the name, version, author and other package **metadata**
-
-* **[dependencies]** list all the other **crates** the project depends on
-
----
-
-class: left
-
-# Building
-
-```bash
-$ cargo build
-```
-
-Output is generated in the target/debug directory on build
-
----
-
-class: left
-
-# Building and Running a project using cargo
-
-* Manually
-
-```bash
-$ ./target/debug/hello_cargo
-```
-
-* Using Cargo
-
-```bash
-$ cargo run
-```
-
-* Cargo will rebuild if code is modified or
-
-* Just run the output
-
----
-
-class: left
-
-# Checking the project
-
-```bash
-$ cargo check
-```
-
-* Quickly check your code to make sure that it compiles
-
-* It skips the step of producing the executable
-
-* Cargo check is faster than cargo build
-
----
-
-class: left
-
-# Building for Release
-
-```bash
-$ cargo build --release
-```
-
-* To compile your project with **optimizations**
-
-* Optimizations make Rust code run faster
-
-* But, takes longer to compile
-
-* Creates an executable in target/**release** instead of target/**debug**
-
----
-
-class: left
-
-# Cargo as Convention
-
-* Provides value with complex projects composed of multiple crates
-
-* As easy as...
-
-```bash
-$ git clone someurl.com/someproject
-$ cd someproject
-$ cargo build
-```
-
----
-
-class: left
-
 # Summary
 
-* `println!("Hello, world!");` prints `Hello, world!` to screen
-
-* **cargo** is the build tool and package manager
-
-* Libraries are called **crates**
+- `println!("Hello, world!");` prints `Hello, world!`
