updated play links

--- a/static/md/1.2_Hello_World.md
+++ b/static/md/1.2_Hello_World.md
@@ -39,6 +39,8 @@ $ ./main
 Hello, world!
 ```
 
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=e475ede2ebaa4faf8d42d9e9887f937e)
+
 ---
 
 class: left
