--- a/static/md/3.1_Variables_and_Mutability.md
+++ b/static/md/3.1_Variables_and_Mutability.md
@@ -25,6 +25,8 @@ The value of x is: 5
 
 read as... value is bound to the name
 
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=6f88c1dda9f330e89bb524e512736cc2)
+
 ---
 
 class: left
