updated to 2018 edition

--- a/static/md/3.2_Data_Types.md
+++ b/static/md/3.2_Data_Types.md
@@ -10,7 +10,7 @@ class: left
 
 # Types
 
-- Rust is a statically typed language and every value is of a certain `type`
+- Rust is a statically typed language and every value is of a certain data `type`
 
 - You can
 
@@ -60,6 +60,8 @@ error[E0282]: type annotations needed
     |       consider giving `x` a type
 error: aborting due to previous error
 ```
+
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=e78bf915f27d24164a0488a784ab5c8b)
 
 ---
 
@@ -132,6 +134,8 @@ Numbers with out decimal points
 
 - Defaults to i32, generally the fastest, even on 64-bit systems
 
+- You can use `_` as visual separator for integers eg; 10_000
+
 ---
 
 class: left
@@ -146,7 +150,7 @@ Numbers with decimal points
 
   - f64 : double precision float
 
-- defaults to f64
+- defaults to f64 and roughly the same speed as f32
 
 ```rust
 fn main() {
@@ -155,6 +159,8 @@ fn main() {
   let y: f32 = 3.0; // f32
 }
 ```
+
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=7f5df4a5d82fcef80f8ed9a6917b82ba)
 
 ---
 
@@ -183,6 +189,8 @@ fn main() {
 }
 ```
 
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=8ace19e7d6bbdf4a6c0ba128cef82812)
+
 ---
 
 class: left
@@ -201,6 +209,8 @@ fn main() {
   let f: bool = false; // with explicit type annotation
 }
 ```
+
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=5e8c01276709118789702acf0681ebe7)
 
 ---
 
@@ -226,6 +236,8 @@ fn main() {
 
 - A **"character"** isn’t really a concept in Unicode, so your human intuition for
   what a **"character"** is may not match up with what a **char** is in Rust
+
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=b9c26169bca749f4a968bec62c9d5727)
 
 ---
 
@@ -263,6 +275,8 @@ fn main() {
 let tup = (500, 6.4, ('X', 200));
 ```
 
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=d32fe0514f39aa32fabff73b1ee463e2)
+
 <!-- can tuples be extended -->
 
 ---
@@ -276,7 +290,7 @@ class: left
 ```rust
 fn main() {
   let tup = (500, 6.4, 'X'); // infered
-  let (x, y, z) = tup;
+  let (_, y, _) = tup;
 
   println!("The value of y is: {}", y);
 }
@@ -284,19 +298,22 @@ fn main() {
 
 - Ignore the destructured values with `_`
 
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=1bd56a387434d98254d72c1df4a37f8c)
+
 **dot notation** : Access elements through **.index**
 
 ```rust
 fn main() {
   let x: (i32, f64, char) = (500, 6.4, 'x');
-
   let five_hundred = x.0;
-
   let six_point_four = x.1;
-
   let one = x.2;
+
+  println!("{}, {}, {}", five_hundred, six_point_four, one)
 }
 ```
+
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=efb02d96e21a32834ca81c06ed006a49)
 
 ---
 
@@ -310,7 +327,7 @@ A comma-separated list of values inside square brackets
 
 - Unlike tuple, every element of an array must be of same type
 
-- arrays are fixed length
+- fixed length
 
 ```rust
 fn main() {
@@ -332,8 +349,11 @@ fn main() {
 
   let first = a[0];
   let second = a[1];
+  println!("first is {} and second is {}", first, second)
 }
 ```
+
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=3cde1d2ef5dd66492e4ec577a6e02b18)
 
 ---
 
@@ -366,7 +386,32 @@ thread '<main>' panicked at 'index out of bounds: the len is 5 but the index is
 note: Run with `RUST_BACKTRACE=1` for a backtrace.
 ```
 
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=831999596add897af382b2303c86cdb2)
+
 <!-- ** array of arrays -->
+
+---
+
+class: left
+
+# Integer Overflow
+
+- u8 can hold values between 0 and 255
+
+- integer overflow will occurs, when the value is changed above 255
+
+Rust deals integer overflow by...
+
+- when compiling in **debug** mode, panic at runtime
+- when compiling in **release** mode, perform two's complement wrapping
+
+two's complement wrapping:
+
+- values greater than the maximum value the type can hold “wrap around” to the minimum of the values the type can hold.
+
+- in case of u8, 256 becomes 0, 257 becomes 1, and so on...
+
+- program won't panic, but can have unexpected behaviour
 
 ---
 
