updated to 2018 edition

--- a/static/md/3.1_Variables_and_Mutability.md
+++ b/static/md/3.1_Variables_and_Mutability.md
@@ -91,7 +91,7 @@ class: left
 
 # Constants
 
-- values that are bound to a name and are not allowed to change
+- values that are bound to a name are not allowed to change
 
 - declared using **const**
 
@@ -112,9 +112,9 @@ The maximum number of points are: 100000
 
 - While Rust can infer types for variables, you need to annotate for constants
 
-**convention:** Snake_case with CAPITAL_LETTERS
-
 - underscores can be inserted in numeric literals to improve readability
+
+**convention:** Snake_case with CAPITAL_LETTERS
 
 [play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=591247020a9c4a234a8911f775d24d2a)
 
@@ -153,7 +153,9 @@ fn main() {
 When declaring a new variable using `let` with the same name as the old variable,
 the new variable is shadowing the old one
 
-- It helps perform transformations on immutable variables
+- It helps perform transformations on the value
+
+- Make them immutable after the transformation
 
 - It effectively creates a new variable with the same name
 
@@ -176,7 +178,7 @@ let spaces = "   "; // type of String
 let spaces = spaces.len(); // type of integer
 ```
 
-[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=2a976fde15cba3fcf566d79ae6428e41)
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=97802125455475c3249c11bcf5a5daa5)
 
 ---
 
@@ -189,9 +191,21 @@ let mut spaces = "   ";
 spaces = spaces.len();
 ```
 
-- Error says we’re not allowed to mutate a variable’s type
+```
+   Compiling playground v0.0.1 (/playground)
+error[E0308]: mismatched types
+ --> src/main.rs:3:14
+  |
+3 |     spaces = spaces.len();
+  |              ^^^^^^^^^^^^ expected &str, found usize
+  |
+  = note: expected type `&str`
+             found type `usize`
+```
 
-[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=fc3bcfde8b7d30d1a3b8176f47659ecb)
+- We’re not allowed to mutate a variable’s type
+
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=a095afc8dcbfced6da04f8f55004a9b8)
 
 ---
 
