--- a/static/md/3.2_Data_Types.md
+++ b/static/md/3.2_Data_Types.md
@@ -34,21 +34,17 @@ class: left
 
 ```rust
 fn main() {
-  let x = 4;
+  let x = 4; // Rust infers type from the value provided
   println!("The value of x is: {}", x);
 }
 ```
-
-Rust infers type from the value provided
 
 ```rust
 fn main() {
-  let x;
+  let x; // Rust can't infer, as no value provided and not annotated as well
   println!("The value of x is: {}", x);
 }
 ```
-
-Rust can't infer, as no value provided and not annotated as well
 
 ```rust
 error[E0282]: type annotations needed
@@ -134,8 +130,6 @@ Numbers with out decimal points
 
 - Defaults to i32, generally the fastest, even on 64-bit systems
 
-- You can use `_` as visual separator for integers eg; 10_000
-
 ---
 
 class: left
@@ -155,12 +149,11 @@ Numbers with decimal points
 ```rust
 fn main() {
   let x = 2.0; // f64
-
   let y: f32 = 3.0; // f32
 }
 ```
 
-[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=7f5df4a5d82fcef80f8ed9a6917b82ba)
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=54c37041dc5e46c940b049a1b63fdb09)
 
 ---
 
@@ -189,7 +182,7 @@ fn main() {
 }
 ```
 
-[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=8ace19e7d6bbdf4a6c0ba128cef82812)
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=89250b3a25290359ab83a9053d4877a6)
 
 ---
 
@@ -210,7 +203,7 @@ fn main() {
 }
 ```
 
-[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=5e8c01276709118789702acf0681ebe7)
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=ce0cca9edf568879b558bd758fd0cca1)
 
 ---
 
@@ -237,7 +230,7 @@ fn main() {
 - A **"character"** isn’t really a concept in Unicode, so your human intuition for
   what a **"character"** is may not match up with what a **char** is in Rust
 
-[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=b9c26169bca749f4a968bec62c9d5727)
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=a6800a4252de318504ab0d44f4f81a82)
 
 ---
 
@@ -264,7 +257,7 @@ A comma-separated list of values inside parentheses
 ```rust
 fn main() {
   let tup = (500, 6.4, 'X'); // integer, float and char
-  let (x, y, z) = tup;
+  let (_x, y, _z) = tup;
   println!("The value of y is: {}", y);
 }
 ```
@@ -275,9 +268,7 @@ fn main() {
 let tup = (500, 6.4, ('X', 200));
 ```
 
-[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=d32fe0514f39aa32fabff73b1ee463e2)
-
-<!-- can tuples be extended -->
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=e1bf94bee055dc70c7174c3ed415ed88)
 
 ---
 
@@ -290,15 +281,19 @@ class: left
 ```rust
 fn main() {
   let tup = (500, 6.4, 'X'); // infered
-  let (_, y, _) = tup;
+  let (_x, y, _z) = tup;
 
   println!("The value of y is: {}", y);
 }
 ```
 
-- Ignore the destructured values with `_`
+- Ignore the unused values by prefixing with `_`
 
 [play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=1bd56a387434d98254d72c1df4a37f8c)
+
+---
+
+class: left
 
 **dot notation** : Access elements through **.index**
 
@@ -335,6 +330,8 @@ fn main() {
 }
 ```
 
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=ffdd57401a2e426312bcc4947a0a85f2)
+
 ---
 
 class: left
@@ -345,7 +342,7 @@ Access individual values in the array by **Indexing**
 
 ```rust
 fn main() {
-  let a = [1, 2, 3, 4, 5];
+  let a: [i32; 5] = [1, 2, 3, 4, 5];
 
   let first = a[0];
   let second = a[1];
@@ -427,4 +424,4 @@ class: left
 
 - (1, 2.5, 'c') Tuples can be mixed type
 
-- [2, 3, 4; 5] Arrays should be of single type and fixed length
+- [2, 3, 4] Arrays should be of single type and fixed length
