--- a/static/md/3.3_Funcitons.md
+++ b/static/md/3.3_Funcitons.md
@@ -2,7 +2,7 @@ class: middle, center
 
 ### 3.3
 
-# How Functions Work
+# Functions
 
 ---
 
@@ -26,8 +26,9 @@ fn another_function() {
 
 - `snake_case` is the convention for function names
 
-- You can access functions above their declaration, Rust dosen't care where your
-  functions are declared
+- You can access functions above their declaration, order doesn't matter
+
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=81f40bf6c93ba4a303e3ff328cc33c77)
 
 ---
 
@@ -47,9 +48,13 @@ fn another_function(x: i32) {
 }
 ```
 
-- `x: i32` declare parameter with type
+- `x: i32` declares parameter with type
 
-- Multiple parameter declarations are Separated with commas
+- multiple parameter declarations are Separated with commas
+
+- must declare the type of each parameter
+
+[play](https://play.integer32.com/?version=stable&mode=debug&edition=2018&gist=73e301489cea500f1ee183bddbeda3f2)
 
 ---
 
